
* 3.1.3 *

* Distinguish between identity and primary key key columns during schema reflection. Allows us 
  us to only do identity inserts when technically needed. Fixes #139 [chadcf] & [joncanady]


* 3.1.2 *

* Fix SQL Azure conflicts with DBCC useroptions. Use new #user_options_xyz methods. [kazamachi]

* Fix identity inserts for tables with natural PKs. [Gian Carlo Pace]

* Create a #configure_connection method that can be overridden. Think "SET TEXTSIZE...".

* Create a #configure_application_name method that can be overridden for unique TinyTDS app names

* Fixed the #finish_statement_handle to cancel the TinyTDS connection if needed.


* 3.1.1 *

* Make #rollback_db_transaction smarter.

* Provide a method to override for the quoted string prefix. Not a config because trumping this method will 
  have drastically bad results. Fixes #124

* Allow :limit/:offset to be used with fully qualified table and column in :select.


* 3.1.0 *

* Add support/test around handling of float/real column types [Lucas Maxwell]

* Make auto reconnect duration configurable. Fixes #109 [David Chelimsky]

* Quote most time objects to use ISO8601 format to be multi-language dateformat compatible. The [datetime] data type is
  automatically limited to milliseconds while [time] & [datetimeoffset] have full support. Even included a Date/Time 
  ActiveSupport formatter that is used per the language settings of the connection.

* Include a visit_Arel_Nodes_UpdateStatement method in our Arel visitor to add a limit/top for update
  that has order and no limit/top. https://github.com/rails/rails/commit/787194ee43ab1fb0a7dc8bfbbfbd5079b047d833
  
* Allow drop_database to be called even when DB does not exist.

* Remove totally broken ADONET connection mode. Want it back, submit a patch.

* Schema reflection now finds primary key for all occasions. Fixed #60 [Boško Ivanišević]

* Allow complex order objects to not be molested by our visitor overrides. Fixes #99
