@@ -1,4 +1,11 @@
 
+* master *
+
+* Pass AR tests by moving DISTINCT to GROUP BY in windowed SQL.
+  - test_count_eager_with_has_many_and_limit_and_high_offset
+  - test_eager_with_has_many_and_limit_and_high_offset
+
+
 * 3.1.3 *
 
 * Distinguish between identity and primary key key columns during schema reflection. Allows us 
